2009-04-04  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Cameron Zwarich

        https://bugs.webkit.org/show_bug.cgi?id=24648
        
        Ensure that mapPoint(const IntPoint&) calls the FloatPoint
        version to avoid infinite recursion.
        
        No test because mapPoint(const IntPoint&) isn't ever called
        on Mac, so I can't reproduce.
        
        * platform/graphics/transforms/TransformationMatrix.h:
        (WebCore::TransformationMatrix::mapPoint):

2009-04-04  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        - fix <rdar://problem/6757862> REGRESSION: Cannot use the mouse to place
          the insertion point inside a Thai character

        Test: fast/text/international/thai-offsetForPosition-inside-character.html

        * platform/graphics/mac/CoreTextController.cpp:
        (WebCore::CoreTextController::offsetForPosition): Changed to use
        cursorMovementIterator instead of characterBreakIterator, allowing this
        function to return a valid cursor position even if it is not at
        a character boundary.

2009-04-04  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        - fix an assertion failure when clicking at the beginning of a
          glyph cluster at the beginning of a text run

        Test: fast/text/offsetForPosition-cluster-at-zero.html

        * platform/graphics/mac/CoreTextController.cpp:
        (WebCore::CoreTextController::offsetForPosition): Corrected the bound
        check on firstGlyphBeforeCluster, letting it be 0 or -1, but not less
        than -1.

2009-04-03  Brian Weinstein  <bweinstein@gmail.com>

        Allows 16 HTML/CSS standard colors to be shown as swatch backgrounds
        when the names are given.

        https://bugs.webkit.org/show_bug.cgi?id=25044

        Reviewed by Timothy Hatcher.

        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylePropertyTreeElement.prototype.updateTitle):
